argocd/tools/easy_wg_mikrotik/easy_wg_mikrotik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy_wg_mikrotik
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy_wg_mikrotik
  template:
    metadata:
      labels:
        app: easy_wg_mikrotik
    spec:
      containers:
      - name: easy_wg_mikrotik
        image: rubyon/easy_wg_mikrotik
        ports:
        - containerPort: 3000
