argocd/tools/easy_wg_mikrotik/easy_wg_mikrotik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easy_wg_mikrotik
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 80
  selector:
    app: easy_wg_mikrotik
